--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MobileProject</string>
+    <string name="app_name">Student Diary</string>
     <string name="title_activity_tab_home">TabHomeActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
@@ -7,4 +7,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="search">Searching</string>
+    <string name="googleAPI">AIzaSyAzIAXPaHjNyrPHgN64Lze-VH--Qdc9Jc0</string>
+    <string name="loginhere">Login</string>
 </resources>
